# bitnames-tg

./: Cargo.toml
src/: bitnames.rs  main.rs
